docs: admin event swagger
