# swagger/swagger.yaml
@@ -24,6 +24,240 @@ definitions:
         example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3MTk3OTExNzMsImlkIjozLCJvcmlnX2lhdCI6MTcxOTcwNDc3Mywicm9sZSI6InVzZXIifQ.c8HuyRAxgNDC4FavwQ_mv-qWOm4Ch6--1-kSQEmK4x0
         type: string
     type: object
+  admin_event_controller.CategoryDto:
+    properties:
+      description:
+        example: EVENT
+        type: string
+      id:
+        example: 3
+        type: integer
+      name:
+        example: event
+        type: string
+    type: object
+  admin_event_controller.CreateRequestDto:
+    properties:
+      city:
+        example: Orlando
+        type: string
+      endAt:
+        example: "2024-01-10T00:00:00Z"
+        type: string
+      location:
+        example: Disney
+        type: string
+      product:
+        $ref: '#/definitions/admin_product_controller.CreateRequestDto'
+      startAt:
+        example: "2024-01-01T00:00:00Z"
+        type: string
+      state:
+        example: FL
+        type: string
+    type: object
+  admin_event_controller.CreateResponseDto:
+    properties:
+      city:
+        example: Orlando
+        type: string
+      endAt:
+        example: "2024-01-10T00:00:00Z"
+        type: string
+      id:
+        example: 1
+        type: integer
+      location:
+        example: Disney
+        type: string
+      product:
+        $ref: '#/definitions/admin_product_controller.CreateResponseDto'
+      productId:
+        example: 1
+        type: integer
+      startAt:
+        example: "2024-01-01T00:00:00Z"
+        type: string
+      state:
+        example: FL
+        type: string
+    type: object
+  admin_event_controller.GetAllProductDto:
+    properties:
+      active:
+        example: true
+        type: boolean
+      category:
+        $ref: '#/definitions/admin_event_controller.CategoryDto'
+      categoryId:
+        example: 3
+        type: integer
+      description:
+        example: Fresh and fiery red hot chilly peppers, perfect for adding a spicy
+          kick to your dishes.
+        type: string
+      discountPrice:
+        example: 4.99
+        type: number
+      id:
+        example: 1
+        type: integer
+      image:
+        example: https://example.com/images/red-hot-chilly-peppers.jpg
+        type: string
+      imageMobile:
+        example: https://example.com/images/red-hot-chilly-peppers-mobile.jpg
+        type: string
+      imageThumbnail:
+        example: https://example.com/images/red-hot-chilly-peppers-thumbnail.jpg
+        type: string
+      isDeleted:
+        example: false
+        type: boolean
+      name:
+        example: Red Hot Chilly Peppers
+        type: string
+      price:
+        example: 5.99
+        type: number
+      uuid:
+        example: 998f91f3-4dd7-419d-a543-0d26a0e945ec
+        type: string
+    type: object
+  admin_event_controller.GetAllResponseDto:
+    properties:
+      city:
+        example: Orlando
+        type: string
+      endAt:
+        example: "2024-01-10T00:00:00Z"
+        type: string
+      id:
+        example: 1
+        type: integer
+      location:
+        example: Disney
+        type: string
+      product:
+        $ref: '#/definitions/admin_event_controller.GetAllProductDto'
+      productId:
+        example: 1
+        type: integer
+      startAt:
+        example: "2024-01-01T00:00:00Z"
+        type: string
+      state:
+        example: FL
+        type: string
+    type: object
+  admin_event_controller.GetOneByIdProductDto:
+    properties:
+      active:
+        example: true
+        type: boolean
+      category:
+        $ref: '#/definitions/admin_event_controller.CategoryDto'
+      categoryId:
+        example: 3
+        type: integer
+      description:
+        example: Fresh and fiery red hot chilly peppers, perfect for adding a spicy
+          kick to your dishes.
+        type: string
+      discountPrice:
+        example: 4.99
+        type: number
+      id:
+        example: 1
+        type: integer
+      image:
+        example: https://example.com/images/red-hot-chilly-peppers.jpg
+        type: string
+      imageMobile:
+        example: https://example.com/images/red-hot-chilly-peppers-mobile.jpg
+        type: string
+      imageThumbnail:
+        example: https://example.com/images/red-hot-chilly-peppers-thumbnail.jpg
+        type: string
+      isDeleted:
+        example: false
+        type: boolean
+      name:
+        example: Red Hot Chilly Peppers
+        type: string
+      price:
+        example: 5.99
+        type: number
+      stock:
+        $ref: '#/definitions/admin_event_controller.StockDto'
+      uuid:
+        example: 998f91f3-4dd7-419d-a543-0d26a0e945ec
+        type: string
+    type: object
+  admin_event_controller.GetOneByIdResponseDto:
+    properties:
+      city:
+        example: Orlando
+        type: string
+      endAt:
+        example: "2024-01-10T00:00:00Z"
+        type: string
+      id:
+        example: 1
+        type: integer
+      location:
+        example: Disney
+        type: string
+      product:
+        $ref: '#/definitions/admin_event_controller.GetOneByIdProductDto'
+      productId:
+        example: 1
+        type: integer
+      startAt:
+        example: "2024-01-01T00:00:00Z"
+        type: string
+      state:
+        example: FL
+        type: string
+    type: object
+  admin_event_controller.StockDto:
+    properties:
+      id:
+        example: 1
+        type: integer
+      minQty:
+        example: 50
+        type: integer
+      productId:
+        example: 1
+        type: integer
+      qty:
+        example: 100
+        minimum: 1
+        type: integer
+    required:
+    - qty
+    type: object
+  admin_event_controller.UpdateRequestDto:
+    properties:
+      city:
+        example: Orlando
+        type: string
+      endAt:
+        example: "2024-01-10T00:00:00Z"
+        type: string
+      location:
+        example: Disney
+        type: string
+      product:
+        $ref: '#/definitions/admin_product_controller.UpdateRequestDto'
+      startAt:
+        example: "2024-01-01T00:00:00Z"
+        type: string
+      state:
+        example: FL
+        type: string
+    type: object
   admin_product_controller.CategoryResponseDto:
     properties:
       description:
@@ -915,6 +1149,189 @@ paths:
       summary: Sign In
       tags:
       - Admin Users
+  /admin/events:
+    get:
+      description: Get all events
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/admin_event_controller.GetAllResponseDto'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middleware.AuthenticationError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/middleware.RolePermissionError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+      summary: Get all events
+      tags:
+      - Admin Event
+    post:
+      description: Create a event
+      parameters:
+      - description: New Event
+        in: body
+        name: Event
+        required: true
+        schema:
+          $ref: '#/definitions/admin_event_controller.CreateRequestDto'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/admin_event_controller.CreateResponseDto'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middleware.AuthenticationError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/middleware.RolePermissionError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+      summary: Create a event
+      tags:
+      - Admin Event
+  /admin/events/{id}:
+    delete:
+      description: Soft Delete a event
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: boolean
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middleware.AuthenticationError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/middleware.RolePermissionError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+      summary: Soft Delete a event
+      tags:
+      - Admin Event
+    get:
+      description: Get One By Id
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/admin_event_controller.GetOneByIdResponseDto'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middleware.AuthenticationError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/middleware.RolePermissionError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+      summary: Get One By Id
+      tags:
+      - Admin Event
+    put:
+      description: Update a event
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update Event
+        in: body
+        name: Event
+        required: true
+        schema:
+          $ref: '#/definitions/admin_event_controller.UpdateRequestDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: boolean
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middleware.AuthenticationError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/middleware.RolePermissionError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+      summary: Update a event
+      tags:
+      - Admin Event
   /admin/products:
     get:
       description: Get all products
